*	Fix bug introduced in 0.8-0 for scatterPlot surfaces
*	Add statistic and percentile option to polarAnnulus; allow
	Conditional Probability Functions
*	Allow percentile intervals to be considered in polarPlot when
	statistic = "cpf"
*	Correct calculation of AOT40 in aqStats to take account of
	daylight hours and growing season (Apr. to Sep.). Can use
	latitude/longitude, if supplied

Changes in openair 0.8-0 [2012-11-30]
=====================================
*	make sure missing dates are plotted properly in scatterPlot
*	fix regression in corPlot - main did not work
*	remove time zone options in import - users must supply data in
	GMT (UTC). Too many problems introduced due to daylight saving
	time
*	Use Legates and McCabe Coefficient of Efficiency in modStats
	in place of the Index of Agreement - easier to interpret.
*	Allow type = "month" etc to be used in timeVariation (was
	variable clash). Allow more flexibility when group and type
	are used
*	Better handling of user-defined limits in polarPlot and
	scatterPlot (method = "level")
*	Add optional mean line option to percentileRose.
*	Correct pollutionRose documentation about comparing 2 data
	sets (first subtracted from second)
*	Fix bug in timeVariation that showed extra NA level for
	certain groups/types
*	Fix scaling bug in polarCluster when there is negative data
	e.g. x = "temp"
*	Allow statistic = "median" in trajLevel
*	NEW FUNCTION timeProp to plot time series by category as a
	barchart
*	Fix windRose bug when wind direction name was not wd
*	Fix bug in importAURN when pollutant = "all" was specified
*	Allow minimum value of breaks in ws to be above minimum ws
	value, but warn.
*	Allow day to be numeric in selectByDate to select days of the
	month
*	Better base maps with trajectory plotting (filled and alpha
	transparency)
*	Fix windRose bug where all data are missing
*	Use higher resolution mapdata not maps package for trajectory
	plots
*	Allow method = "hexbin" in trajLevel for hexagonal binning