@@ -8,6 +8,7 @@ Changes in openair 0.9-0 [2013-02-13]
 *	Correct calculation of AOT40 in aqStats to take account of
 	daylight hours and growing season (Apr. to Sep.). Can use
 	latitude/longitude, if supplied
+*	Fix bug in aqStats when non predefined pollutant used
 
 Changes in openair 0.8-0 [2012-11-30]
 =====================================
